--- a/Final_Manuscript.tex
+++ b/Final_Manuscript.tex
@@ -462,7 +462,7 @@ heterosexual and non-heterosexual women in levels of
 other-objectification of their female partners in the measures section
 below.
 
-\subsection{Post interaction Measures}\label{post-interaction-measures}
+\subsection{Measures}\label{measures}
 
 \begin{table}[tbp]
 \begin{center}
@@ -486,41 +486,48 @@ below.
 \end{center}
 \end{table}
 
-The following measures were collected in the order they are presented
-following the interaction. Correlations and descriptive statistics of
-all study variables appear in Table~\ref{tab:corrtable}.
+\begin{table}[tbp]
+\begin{center}
+\begin{threeparttable}
+\caption{\label{tab:measures}Measures}
+\begin{tabular}{lllll}
+\toprule
+ & \multicolumn{1}{c}{Original Source} & \multicolumn{1}{c}{Example Item} & \multicolumn{1}{c}{Reliability Sample 1} & \multicolumn{1}{c}{Reliability Sample 2}\\
+\midrule
+Cognitive performance & @mcfarlin1984remote & The correct answer for the trigram "Quack: Pond: Waddle" would be "Duck" & Not avaliable & Not avaliable\\
+Objectification of partner & @garcia2016objectification & "During the interaction, how often did you think about your partner’s personality?" (...friends, family, and extracurricular interests, body, appearance, clothing, and body parts) on a scale from 1 (not at all) to 7 (constantly). A difference between the average internal and exxternal traits is taken & external:  0.79 ; internal:  0.71 & external:  0.76 ; internal:  0.79\\
+Authenticity of interaction & @garcia2016objectification & "During the interaction, to what extent did you feel comfortable?" (...happy, friendly, warm, easygoing, sincere, and authentic) on a scale ranging from 1 (not at all) to 7 (very much) & 0.91 & 0.91\\
+State self-objectification & @saguyetal2010 & "During the interaction I felt more like a body than a full self" & 0.84 & 0.85\\
+Relationship agency & @garcia2016objectification & "ask someone out on a date" Responses were measured on a scale ranging from 1 (not at all likely) to 7 (extremely likely) & 0.72 & 0.74\\
+Career aspirations & @grayobrien2007 & "I hope to become a leader in my career field" & 0.73 & 0.80\\
+Trait self objectification (TSO) & @nollfredrickson1998 & Participants rank order aspects of their bodies from 1 (least important) to 10 (most important): weight, sex appeal, physical attractiveness, firm/sculpted muscles and body measurements, strength, physical coordination, energy level, health and physical fitness. Difference scores were computed by subtracting the sum of the 5 functional aspects/competence attributes (e.g., health, strength) from the sum of the 5 physical self-concepts/appearance attributes (e.g., physical attractiveness, weight), and all measures were multiplied by -1 so that positive scores indicated greater TSO. & appearance:  0.44 ; competence:  0.43 & appearance:  0.51 ; competence:  0.30\\
+\bottomrule
+\end{tabular}
+\end{threeparttable}
+\end{center}
+\end{table}
 
-\subsubsection{Cognitive Performance}\label{cognitive-performance}
+The same set of measures given in Garcia et al. (2016) were given to
+participants in the current study. For more details about each of these
+measures please see that previous paper. To summarize, the list of
+measures in the order given to participants appears in
+Table~\ref{tab:measures} along side the orginal source for the scale, an
+example item, and the reliability in the current sample. Correlations
+and descriptive statistics of all study variables appear in
+Table~\ref{tab:corrtable}.
 
-Trigrams from the Remote Associates Task (McFarlin \& Blascovich, 1984)
-were utilized to assess cognitive performance after the interaction. Ten
-items were selected and presented to participants. For example, the
-correct answer for the trigram \enquote{Quack: Pond: Waddle} would be
-\enquote{Duck}. Participants are limited to 30 seconds to provide their
-answers. For every correct answer, 1 point is given. The mean score was
-5.03 (SD = 2.29). Cognitive performance was measured first directly
-after the interaction in order to measure potential immediate detriments
-to performance (Garcia et al., 2016).
-
-\subsubsection{State
-Other-Objectification}\label{state-other-objectification}
-
-To measure the participant's objectification of their partner in the
-interaction, participants were asked a series of questions about the
-frequency of thoughts during the interaction in relation to multiple
-characteristics of their partner (Garcia et al., 2016). Questions
-included aspects of their partner's internal traits such as personality,
-friends, family, and extracurricular interests, as well as external
-traits such as body, appearance, clothing, and body parts. All questions
-were rated on a scale from 1 (not at all) to 7 (constantly).
-Objectification was measured by taking the difference between the
-average frequency of thought about their partner's external traits
-(\(\alpha\) = 0.79 for Sample 1, \(\alpha\) = 0.79 for Sample 2) and
-frequency of thought about their partner's internal traits (\(\alpha\) =
-0.79 for Sample 1, \(\alpha\) = 0.76 for Sample 2). A positive score in
-this scale would indicate that the participant thought about their
-partner's external traits more than the partner's internal traits, and a
-negative score would indicate the opposite.
+Cognitive performance with the Remote Associates Task's trigrams
+(McFarlin \& Blascovich, 1984) was given first, to capture any
+attentional changes that may have been affected by the interaction. Next
+participants were given a set of measure about their thoughts and
+feelings during the interaction that included State-Other
+Objectification, Interaction Authenticity, and State
+Self-Objectification. Following these measures participants completed
+the Relationship Agency Scale and the Career Aspirations Scale. Lastly,
+as was the case in Garcia et al. (2016), Trait Self-Objectification was
+given last, as not to arouse suspicious at the start of the study that
+we were actually focusing on objectification and to give enough time
+that immediate effects of the interaction would have worn off.
 
 As can be seen in Table~\ref{tab:corrtable}, the mean
 other-objectification of women by women was \emph{M =} -1.58 (\emph{SD
@@ -532,85 +539,16 @@ heterosexual (\emph{M =} -1.77, \emph{SD =} 1.14) and non-heterosexual
 women (\emph{M =} -1.39, \emph{SD =} 1.35) was not statistically
 significant, \emph{t}(25.89) = 1.02, \emph{p =} 0.32.
 
-\subsubsection{Interaction Authenticity}\label{interaction-authenticity}
+Howbody used 3 items, but in both samples the reliability of the scale
+was higher once the third item was removed, so we chose to only use the
+first two for our measure of SSO, leaving us with a reliable scale (see
+Table~\ref{tab:measures}).
 
-To assess the magnitude to which individuals felt comfortable in the
-interaction and perceived the interaction to be authentic, we asked
-participants to rate the extent to which they felt comfortable, happy,
-friendly, warm, easygoing, sincere, and authentic on a scale ranging
-from 1 (not at all) to 7 (very much), much like (Garcia et al., 2016).
-Participants were additionally asked to rate their interaction partner's
-authenticity as well as their own: \enquote{Do you think your partner
-was authentic during your interaction?} and \enquote{Were you authentic
-during your interaction?} These questions were ranked on a scale from 1
-(not at all) to 7 (very much). These were combined to form the
-authenticity scale (\(\alpha\) = 0.91 for Sample 1, \(\alpha\) = 0.91
-for Sample 2).
-
-\subsubsection{State
-Self-Objectification}\label{state-self-objectification}
-
-To assess state self-objectification, we used an average of two items
-from Saguy et al. (2010) that were also used in Garcia et al. (2016).
-Participants were asked to rank how much they agreed with the following
-statements: \enquote{During the interaction I felt more like a body than
-a full self} and \enquote{I felt more like a body than as a real person
-in the interaction}. Originally, Saguy et al. (2010) used 3 items, but
-in both samples the reliability of the scale was higher once the third
-item was removed, so we chose to only use the first two for our measure
-of SSO, leaving us with a reliable scale (\(\alpha\) = 0.84 for Sample
-1, and \(\alpha\) = 0.85 for Sample 2.)
-
-\subsubsection{Relationship Agency}\label{relationship-agency}
-
-A scale was used from Garcia et al. (2016) to assess how much agency an
-individual believes they would possess in future romantic relationships.
-Participants were asked how likely it was that they would do the
-following: \enquote{ask someone out on a date,} \enquote{open the door
-for your date,} \enquote{pay for a date,} \enquote{ask your
-boyfriend/girlfriend to marry you,} \enquote{initiate sex with your
-girlfriend/boyfriend,} \enquote{initiate condom use during sex,}
-\enquote{surprise your boyfriend/ girlfriend with a gift,} and
-\enquote{ask your girlfriend/boyfriend to move with you to a new place.}
-Responses were measured on a scale ranging from 1 (not at all likely) to
-7 (extremely likely). The scale originally had 9 items, but the 9th item
+Relationship agency The scale originally had 9 items, but the 9th item
 had low correlations with the remaining items, ranging from .02 to .30
 for the first sample, and .04 to .30 for the second sample. Therefore,
 this item was removed. As a result, the 8-item scale had moderately high
-reliability for both samples (\(\alpha\) = 0.72 for Sample 1,
-(\(\alpha\) = 0.74 for Sample 2).
-
-\subsubsection{Career Aspirations}\label{career-aspirations}
-
-To conceptualize participants' career aspirations after the interaction,
-we used the 10-item adaptation of Gray and OBrien (2007)'s Career
-Aspiration Scale which asked participants to consider how true 10
-statements were in regard to their future careers on a scale from 0 (not
-at all true of me) to 4 (very true of me). Items include \enquote{I hope
-to become a leader in my career field} and \enquote{I hope to move up
-through any organization or business I work in.} Items were fairly
-reliable (\(\alpha\) = 0.73 for Sample 1, \(\alpha\) = 0.80 for Sample
-2).
-
-\subsubsection{Trait
-Self-Objectification}\label{trait-self-objectification}
-
-Trait self-objectification (TSO) was assessed using the
-Self-Objectification Questionnaire (B. L. Fredrickson et al., 1998; S.
-Noll \& Fredrickson, 1998), which evaluates the extent to which
-individuals view their bodies in observable versus non-observable ways.
-The questionnaire asked participants to rank order both appearance and
-functional aspects of their bodies, from 1 (least important) to 10 (most
-important), with respect to physical self-concepts. Of the ten body
-attributes, five of the items were appearance-based (weight, sex appeal,
-physical attractiveness, firm/sculpted muscles and body measurements),
-and five of the items were competence-based (strength, physical
-coordination, energy level, health and physical fitness). Difference
-scores were computed by subtracting the sum of the 5 functional
-aspects/competence attributes (e.g., health, strength) from the sum of
-the 5 physical self-concepts/appearance attributes (e.g., physical
-attractiveness, weight), and all measures were multiplied by -1 so that
-positive scores indicated greater TSO.
+reliability for both samples (see Table~\ref{tab:measures}).
 
 \section{Results}\label{results}
 
@@ -898,29 +836,31 @@ In addition to being relatively small and combined across two
 institutions, another limitation of the current study sample is that the
 it was comprised of Western women only. Being that self-objectification
 has been found to be most prevalent in Western culture (Loughnan et al.,
-2015) research on objectification conducted outside of Western or
-Westernized countries has been scarce (Moradi \& Huang, 2008), although
-more recent work has examined objectification from a cross-cultural
-framework (Loughnan et al., 2015, Wollast et al. (2020)). Since
-\enquote{bodies exist within social and cultural contexts, and hence are
-also constructed through sociocultural practices and discourses}
-(Fredrickson \& Roberts, 1997, p. 174), it is important to consider how
-diverse social identities within unique cultural contexts may inform
-sexual objectification phenomenon to test the cross-cultural
-applicability of theoretical frameworks (Loughnan et al., 2015).
+2015) research on objectification {[}{[}{[}conducted outside of Western
+or Westernized countries{]}{]}{]} has been scarce (Moradi \& Huang,
+2008), although more recent work has examined objectification from a
+cross-cultural framework (Loughnan et al., 2015, Wollast et al. (2020)).
+{[}{[}{[}Since \enquote{bodies exist within social and cultural
+contexts, and hence are also constructed through sociocultural practices
+and discourses}{]}{]}{]} (Fredrickson \& Roberts, 1997, p. 174), it is
+important to consider how diverse social identities within unique
+cultural contexts may inform sexual objectification phenomenon
+{[}{[}{[}to test the cross-cultural applicability of theoretical
+frameworks{]}{]}{]} (Loughnan et al., 2015).
 
 Further, sexualizing experiences and self-objectification are thought to
 begin a very young age, and thus, researchers have only recently begun
 to examine such experiences among children (e.g., Holland \& Haslam,
-2016; Jongenelis, Byrne, \& Pettigrew, 2014). Considering the fact that
-the average mean age of the investigated participants of this current
-study was 18.85 years, research among younger and older individuals is
-needed, especially because the processes of self-objectification may
-change over time (Fredrickson \& Roberts, 1997). It may be valuable to
-question the extent to which children, adolescents, or emerging adults
-of different races or ethnicities are exposed to varied amounts of
-sexualizing content. Further, more longitudinal studies investigating
-the developmental experience of interpersonal objectification and
+2016; Jongenelis, Byrne, \& Pettigrew, 2014). {[}{[}Considering the fact
+that the average mean age of the investigated participants of this
+current study was 18.85 years, research among younger and older
+individuals is needed{]}{]}{]}, especially because the processes of
+self-objectification may change over time (Fredrickson \& Roberts,
+1997). {[}{[}{[}It may be valuable to question the extent to which
+children, adolescents, or emerging adults of different races or
+ethnicities are exposed to varied amounts of sexualizing
+content.{]}{]}{]} Further, more longitudinal studies investigating the
+developmental experience of interpersonal objectification and
 self-objectification are needed.
 
 \subsubsection{Interpersonal Sexual Objectification, Gender, and Sexual
@@ -934,47 +874,48 @@ their target---and there is evidence that they might do this readily
 (Puvia \& Vaes, 2013; Strelan \& Hargreaves, 2005)---perhaps they may be
 even more apt to activate social comparison processes (Festinger, 1954)
 than women who are sexually attracted to other women (non-heterosexual
-women). Since both men and women are socialized in a culture that
-sexually objectifies women, both men and women may come to internalize
-this socialization and sexually objectify women. Indeed, recent research
-has found that the more women self-objectify, the more they objectify
-other women (Loughnan et al., 2015; Puvia \& Vaes, 2013), although not
-to the degree exhibited by men; that is, men were found to objectify
-women significantly more than women objectify other women (Strelan \&
+women). {[}{[}{[}Indeed, recent research has found that the more women
+self-objectify, the more they objectify other women{]}{]}{]} (Loughnan
+et al., 2015; Puvia \& Vaes, 2013), {[}{[}{[}although not to the degree
+exhibited by men; that is, men were found to objectify women
+significantly more than women objectify other women{]}{]}{]} (Strelan \&
 Hargreaves, 2005). This differential psychological process between women
 with differing sexualities might have served to dampen our ability to
 detect relationships.
 
-Previous research has found that when compared to heterosexual women,
-lesbian women report less concern with physical appearance (Siever,
-1994; Strong, Williamson, Netemeyer, \& Geer, 2000), lower body
-surveillance (Hill \& Fischer, 2008), and lower self-objectification
-(Noffsinger-Frazier, 2004). However none of these studies examined the
-relationship between self-objectification and experiences of sexual
-objectification. Thus, it is unclear whether lesbian women indeed
-experience similar levels of cultural sexual objectification but
-internalize them less than heterosexual women do. Consistent with
-previous research, Hill and Fischer (2008) determined that lesbians
-exhibited less physical appearance concerns compared to heterosexual
-women, however there was no evidence found that lesbian women
-self-objectify less than heterosexual women and they did not find that
-sexual orientation moderates the relationship between sexual
-objectification and self-objectification. This evidence sits in contrast
-to older theoretical literature that suggests that lesbians internalize
-cultural sexual objectification less than do heterosexual women (Brown,
-1987; Pitman, 1999; Rothblum, 1994; Siever, 1994).
+\subsubsection{Sexism and Sexual
+Discrimination}\label{sexism-and-sexual-discrimination}
+
+Sexism has been found to be related to the objectification of women, but
+not men (Cikara, Eberhardt, \& Fiske, 2011; Harsey \& Zurbriggen, 2020),
+and in addition, TSO has been found to be associated with less negative
+attitudes towards sexual harassment (Bernard, Legrand, \& Klein, 2018).
+Both of these effects are present for both men and women. Empirical
+evidence illustrates how women continue to be objects of interpersonal
+discrimination and experience daily sexist hassles (Swim, Hyers, Cohen,
+\& Ferguson, 2001). One form of interpersonal discrimination women face
+is the process by which their whole being is viewed as a collection of
+sexualized body parts valued predominantly for commodification, a
+phenomena termed sexual objectification (Bartky, 1990). Sexual
+objectification of women has also been linked to trauma (Miles-McLean et
+al., 2015). Sexual objectification occurs in a myriad of ways in women's
+lives and is modified by unique combinations of race, ethnicity,
+sexuality, age, and class (Fredrickson \& Roberts, 1997). Amid such
+heterogeneity though, \enquote{having a reproductively mature female
+body} proposed by Fredrickson and Roberts (1997) is likely to create a
+shared vulnerability to sexual objectification and a variety of shared
+negative experiences as a result.
 
 \section{Conclusion}\label{conclusion}
 
-The results of this study demonstrate the complex and ambivalent nature
-of sexual objectification and additionally highlight the psychological
-and social consequences of such objectification processes on women's
-social relationships and well-being. These results are quite useful for
-promoting mental health, the creation and maintenance of early action
-programs for girls and young women, and for scholars and practitioners
-to work intentionally to provide the tools necessary to circumvent or
-mitigate negative effects on self-objectification to combat such
-experiences.
+The results of this study \ldots{} and additionally highlight the
+psychological and social consequences of such objectification processes
+on women's social relationships and well-being. These results are quite
+useful for promoting mental health, the creation and maintenance of
+early action programs for girls and young women, and for scholars and
+practitioners to work intentionally to provide the tools necessary to
+circumvent or mitigate negative effects on self-objectification to
+combat such experiences.
 
 \newpage
 
@@ -996,10 +937,11 @@ R Markdown}. Retrieved from \url{https://github.com/crsh/papaja}
 Bartky, S. (1990). \emph{Femininity and domination: Studies in the
 phenomenology of oppression}. Routledge, New York.
 
-\hypertarget{ref-brown1987lesbians}{}
-Brown, L. S. (1987). Lesbians, weight, and eating: New analyses and
-perspectives. \emph{Lesbian Psychologies: Explorations and Challenges},
-294--309.
+\hypertarget{ref-bernard2018bodies}{}
+Bernard, P., Legrand, S., \& Klein, O. (2018). From bodies to blame:
+Exposure to sexually objectifying media increases tolerance toward
+sexual harassment. \emph{Psychology of Popular Media Culture},
+\emph{7}(2), 99.
 
 \hypertarget{ref-brunelletal2010}{}
 Brunell, A. B., Kernis, M. H., Goldman, B. M., Heppner, W., Davis, P.,
@@ -1017,6 +959,11 @@ of Women Quarterly}, \emph{28}(1), 16--21.
 Calogero, R. M., Tantleff-Dunn, S. E., \& Thompson, J. (2011).
 \emph{Self-objectification in women: Causes, consequences, and
 counteractions.} American Psychological Association.
+
+\hypertarget{ref-cikara2011agents}{}
+Cikara, M., Eberhardt, J. L., \& Fiske, S. T. (2011). From agents to
+objects: Sexist attitudes and neural responses to sexualized targets.
+\emph{Journal of Cognitive Neuroscience}, \emph{23}(3), 540--551.
 
 \hypertarget{ref-davies2005clearing}{}
 Davies, P. G., Spencer, S. J., \& Steele, C. M. (2005). Clearing the
@@ -1079,12 +1026,6 @@ Social Psychology}, \emph{59}(1), 248--283.
 Gervais, S. J., Vescio, T. K., \& Allen, J. (2011). When what you see is
 what you get: The consequences of the objectifying gaze for women and
 men. \emph{Psychology of Women Quarterly}, \emph{35}(1), 5--17.
-
-\hypertarget{ref-grayobrien2007}{}
-Gray, M. P., \& OBrien, K. M. (2007). Advancing the assessment of
-women's career choices: The career aspiration scale. \emph{Journal of
-Career Assessment - J CAREER ASSESSMENT}, \emph{15}, 317--337.
-doi:\href{https://doi.org/10.1177/1069072707301211}{10.1177/1069072707301211}
 
 \hypertarget{ref-harsey2020men}{}
 Harsey, S. J., \& Zurbriggen, E. L. (2020). Men and women's
@@ -1161,6 +1102,12 @@ Meltzer, A. L. (2020). Women can benefit from sexual and physical
 valuation in the context of a romantic relationship. \emph{Personality
 and Social Psychology Bulletin}, \emph{46}(2), 243--257.
 
+\hypertarget{ref-miles2015stop}{}
+Miles-McLean, H., Liss, M., Erchull, M. J., Robertson, C. M., Hagerman,
+C., Gnoleba, M. A., \& Papp, L. J. (2015). ``Stop looking at me!''
+interpersonal sexual objectification as a source of insidious trauma.
+\emph{Psychology of Women Quarterly}, \emph{39}(3), 363--374.
+
 \hypertarget{ref-moradi2008}{}
 Moradi, B., \& Huang, Y.-P. (2008). Objectification theory and
 psychology of women: A decade of advances and future directions.
@@ -1177,18 +1124,6 @@ Comportement}, \emph{33}(4), 269.
 Nadal, K. L., \& Haynes, K. (2012). Women's psychology. women and mental
 disorders. In N. Lundberg-Love P. K. \& M. A. Paludi (Eds.), (pp.
 87--101). Praeger/ABC-CLIO.
-
-\hypertarget{ref-noffsinger2004objectification}{}
-Noffsinger-Frazier, N. A. (2004). \emph{Objectification theory and
-disordered eating: The impact of feminist identification,
-internalization of sociocultural standards of appearance, and sexual
-orientation} (PhD thesis). The University of Memphis.
-
-\hypertarget{ref-nollfredrickson1998}{}
-Noll, S., \& Fredrickson, B. (1998). A mediational model linking
-self-objectification, body shame, and disordered eating.
-\emph{Psychology of Women Quarterly}, \emph{22}, 623--636.
-doi:\href{https://doi.org/10.1111/j.1471-6402.1998.tb00181.x}{10.1111/j.1471-6402.1998.tb00181.x}
 
 \hypertarget{ref-olsen2006structural}{}
 Olsen, J. A., \& Kenny, D. A. (2006). Structural equation modeling with
@@ -1208,11 +1143,6 @@ interaction. \emph{Psychological Science}, \emph{19}(12), 1272--1279.
 Pinheiro, J., Bates, D., DebRoy, S., Sarkar, D., \& R Core Team. (2017).
 \emph{nlme: Linear and nonlinear mixed effects models}. Retrieved from
 \url{https://CRAN.R-project.org/package=nlme}
-
-\hypertarget{ref-pitman1999body}{}
-Pitman, G. E. (1999). Body image, compulsory heterosexuality, and
-internalized homophobia. \emph{Journal of Lesbian Studies}, \emph{3}(4),
-129--139.
 
 \hypertarget{ref-puvia2013being}{}
 Puvia, E., \& Vaes, J. (2013). Being a body: Women's appearance related
@@ -1257,11 +1187,6 @@ Rollero, C. (2016). Bringing objectification into social relationships
 research: Is self-objectification harmful for authenticity? \emph{The
 Spanish Journal of Psychology}, (19), 1--7.
 
-\hypertarget{ref-rothblum1994lesbians}{}
-Rothblum, E. (1994). Lesbians and physical appearance which model
-applies? \emph{Lesbian and Gay Psychology: Theory, Research, and
-Clinical Applications}, \emph{1}, 84.
-
 \hypertarget{ref-saguyetal2010}{}
 Saguy, T., Quinn, D., F Dovidio, J., \& Pratto, F. (2010). Interacting
 like a body: Objectification can lead women to narrow their presence in
@@ -1280,12 +1205,6 @@ be the target of prejudice: Implications for interethnic interactions.
 \emph{Personality and Social Psychology Bulletin}, \emph{31}(9),
 1189--1202.
 
-\hypertarget{ref-siever1994sexual}{}
-Siever, M. D. (1994). Sexual orientation and gender as factors in
-socioculturally acquired vulnerability to body dissatisfaction and
-eating disorders. \emph{Journal of Consulting and Clinical Psychology},
-\emph{62}(2), 252.
-
 \hypertarget{ref-R-apaTables}{}
 Stanley, D. (2018). \emph{ApaTables: Create american psychological
 association (apa) style tables}. Retrieved from
@@ -1301,11 +1220,12 @@ Strelan, P., \& Pagoudis, S. (2018). Birds of a feather flock together:
 The interpersonal process of objectification within intimate
 heterosexual relationships. \emph{Sex Roles}, \emph{79}(1-2), 72--82.
 
-\hypertarget{ref-strong2000eating}{}
-Strong, S. M., Williamson, D. A., Netemeyer, R. G., \& Geer, J. H.
-(2000). Eating disorder symptoms and concerns about body differ as a
-function of gender and sexual orientation. \emph{Journal of Social and
-Clinical Psychology}, \emph{19}(2), 240--255.
+\hypertarget{ref-swimetal}{}
+Swim, J. K., Hyers, L. L., Cohen, L. L., \& Ferguson, M. J. (2001).
+Everyday sexism: Evidence for its incidence, nature, and psychological
+impact from three daily diary studies. \emph{Journal of Social Issues},
+\emph{57}(1), 31--53.
+doi:\href{https://doi.org/10.1111/0022-4537.00200}{10.1111/0022-4537.00200}
 
 \hypertarget{ref-teran2020relational}{}
 Terán, L., Jiao, J., \& Aubrey, J. S. (2020). The relational burden of
